updated the cors config